--- a/document/book.bib
+++ b/document/book.bib
@@ -1382,12 +1382,13 @@ Basically article on IDyOM 101
   file = {/Users/davidjohnbaker/Zotero/storage/TC9TY8V9/Feuermal - Wer für etwas brennt, der fackelt nicht lange..pdf}
 }
 
-@article{harrisonDissociatingSensoryCognitive,
+@article{harrisonDissociatingSensoryCognitive2018,
   title = {Dissociating Sensory and Cognitive Theories of Harmony Perception through Computational Modeling},
   doi = {10.31234/osf.io/wgjyv},
   abstract = {Two approaches exist for explaining harmonic expectation. The sensory approach claims that harmonic expectation is a low-level process driven by sensory responses to acoustic properties of musical sounds. Conversely, the cognitive approach describes harmonic expectation as a high-level cognitive process driven by the recognition of syntactic structure learned through experience. Many previous studies have sought to distinguish these two hypotheses, largely yielding support for the cognitive hypothesis. However, subsequent re-analysis has shown that most of these results can parsimoniously be explained by a computational model from the sensory tradition, namely Leman's (2000) model of auditory shortterm memory (Bigand, Delb\'e, Poulin-Charronnat, Leman, \& Tillmann, 2014). In this research we re-examine the explanatory power of auditory short-term memory models, and compare them to a new model in the Information Dynamics Of Music (IDyOM) tradition, which simulates a cognitive theory of harmony perception based on statistical learning and probabilistic prediction. We test the ability of these models to predict the surprisingness of chords within chord sequences (N = 300), as reported by a sample group of university undergraduates (N = 50). In contrast to previous studies, which typically use artificial stimuli composed in a classical idiom, we use naturalistic chord sequences sampled from a large dataset of popular music. Our results show that the auditory short-term memory models have remarkably low explanatory power in this context. In contrast, the new statistical learning model predicts surprisingness ratings relatively effectively. We conclude that auditory short-term memory is insufficient to explain harmonic expectation, and that cognitive processes of statistical learning and probabilistic prediction provide a viable alternative.},
   language = {en},
   author = {Harrison, Peter M . C. and Pearce, Marcus Thomas},
+  year = {2018},
   file = {/Users/davidjohnbaker/Zotero/storage/JKCLWJP7/Harrison and Pearce - Dissociating sensory and cognitive theories of har.pdf}
 }
 
@@ -2443,6 +2444,124 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   title = {The {{Essen Folk Song Collection}}, {{D}}. {{Huron}}},
   author = {Schaffrath, Helmuth},
   year = {1995}
+}
+
+@article{pearceStatisticalLearningProbabilistic2018a,
+  title = {Statistical Learning and Probabilistic Prediction in Music Cognition: Mechanisms of Stylistic Enculturation: {{Enculturation}}: Statistical Learning and Prediction},
+  volume = {1423},
+  issn = {00778923},
+  shorttitle = {Statistical Learning and Probabilistic Prediction in Music Cognition},
+  doi = {10.1111/nyas.13654},
+  language = {en},
+  number = {1},
+  journal = {Annals of the New York Academy of Sciences},
+  author = {Pearce, Marcus T.},
+  month = jul,
+  year = {2018},
+  pages = {378-395},
+  file = {/Users/davidjohnbaker/Zotero/storage/NNUL3ZQX/Pearce - 2018 - Statistical learning and probabilistic prediction .pdf}
+}
+
+@phdthesis{pearceConstructionEvaluationStatistical2005,
+  address = {Department of Computer Science},
+  title = {The Construction and Evaluation of Statistical Models of Melodic Structure in Music Perception and Composition.},
+  school = {City University of London.},
+  author = {Pearce, Marcus},
+  year = {2005}
+}
+
+@book{lerdahlGenerativeTheoryTonal1986,
+  address = {Cambridge},
+  title = {A Generative Theory of Tonal Music.},
+  publisher = {{MIT Press}},
+  author = {Lerdahl, Fred and Jackendoff, Ray},
+  year = {1986}
+}
+
+@article{levitinCurrentAdvancesCognitive2009,
+  title = {Current {{Advances}} in the {{Cognitive Neuroscience}} of {{Music}}},
+  volume = {1156},
+  issn = {00778923},
+  doi = {10.1111/j.1749-6632.2009.04417.x},
+  language = {en},
+  number = {1},
+  journal = {Annals of the New York Academy of Sciences},
+  author = {Levitin, Daniel J. and Tirovolas, Anna K.},
+  month = mar,
+  year = {2009},
+  pages = {211-231},
+  file = {/Users/davidjohnbaker/Zotero/storage/X5JNPXUJ/Levitin and Tirovolas - 2009 - Current Advances in the Cognitive Neuroscience of .pdf}
+}
+
+@book{temperleyCognitionBasicMusical2004,
+  address = {Cambridge},
+  title = {The Cognition of Basic Musical Structures},
+  publisher = {{MIT Press}},
+  author = {Temperley, David},
+  year = {2004}
+}
+
+@article{mcdermottIndifferenceDissonanceNative2016,
+  title = {Indifference to Dissonance in Native {{Amazonians}} Reveals Cultural Variation in Music Perception},
+  volume = {535},
+  issn = {0028-0836, 1476-4687},
+  doi = {10.1038/nature18635},
+  language = {en},
+  number = {7613},
+  journal = {Nature},
+  author = {McDermott, Josh H. and Schultz, Alan F. and Undurraga, Eduardo A. and Godoy, Ricardo A.},
+  month = jul,
+  year = {2016},
+  pages = {547-550},
+  file = {/Users/davidjohnbaker/Zotero/storage/KUWLZ3FF/McDermott et al. - 2016 - Indifference to dissonance in native Amazonians re.pdf}
+}
+
+@article{savageStatisticalUniversalsReveal2015,
+  title = {Statistical Universals Reveal the Structures and Functions of Human Music},
+  volume = {112},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1414495112},
+  language = {en},
+  number = {29},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Savage, Patrick E. and Brown, Steven and Sakai, Emi and Currie, Thomas E.},
+  month = jul,
+  year = {2015},
+  pages = {8987-8992},
+  file = {/Users/davidjohnbaker/Zotero/storage/YC4LG7MA/Savage et al. - 2015 - Statistical universals reveal the structures and f.pdf}
+}
+
+@article{bigandEmpiricalEvidenceMusical2014,
+  title = {Empirical Evidence for Musical Syntax Processing? {{Computer}} Simulations Reveal the Contribution of Auditory Short-Term Memory},
+  volume = {8},
+  issn = {1662-5137},
+  shorttitle = {Empirical Evidence for Musical Syntax Processing?},
+  doi = {10.3389/fnsys.2014.00094},
+  abstract = {During the last decade, it has been argued that (1) music processing involves syntactic representations similar to those observed in language, and (2) that music and language share similar syntactic-like processes and neural resources. This claim is important for understanding the origin of music and language abilities and, furthermore, it has clinical implications. The Western musical system, however, is rooted in psychoacoustic properties of sound, and this is not the case for linguistic syntax. Accordingly, musical syntax processing could be parsimoniously understood as an emergent property of auditory memory rather than a property of abstract processing similar to linguistic processing. To support this view, we simulated numerous empirical studies that investigated the processing of harmonic structures, using a model based on the accumulation of sensory information in auditory memory. The simulations revealed that most of the musical syntax manipulations used with behavioral and neurophysiological methods as well as with developmental and cross-cultural approaches can be accounted for by the auditory memory model. This led us to question whether current research on musical syntax can really be compared with linguistic processing. Our simulation also raises methodological and theoretical challenges to study musical syntax while disentangling the confounded low-level sensory influences. In order to investigate syntactic abilities in music comparable to language, research should preferentially use musical material with structures that circumvent the tonal effect exerted by psychoacoustic properties of sounds.},
+  language = {en},
+  journal = {Frontiers in Systems Neuroscience},
+  author = {Bigand, Emmanuel and Delb\~A\textcopyright, Charles and {Poulin-Charronnat}, B\~A\textcopyright{}n\~A\textcopyright{}dicte and Leman, Marc and Tillmann, Barbara},
+  month = jun,
+  year = {2014},
+  file = {/Users/davidjohnbaker/Zotero/storage/N5PVM3JZ/Bigand et al. - 2014 - Empirical evidence for musical syntax processing .pdf}
+}
+
+@phdthesis{sauvePredictionPolyphonyModelling2017,
+  address = {Centre for Digital Music},
+  title = {Prediction in {{Polyphony}}: {{Modelling Auditory Scene Analysis}}},
+  school = {Queen Mary, University of London},
+  author = {Sauve, Sarah},
+  year = {2017}
+}
+
+@article{shannonMathematicalTheoryCommunication1948,
+  title = {A Mathematical Theory of Communication},
+  volume = {27},
+  journal = {Bell System Technical Journal},
+  author = {Shannon, Claude},
+  year = {1948},
+  pages = {379--423},
+  file = {/Users/davidjohnbaker/Zotero/storage/AZE4K86F/Shannon - A mathematical theory of communication.pdf}
 }
 
 
