--- a/smt40/currentProspectus/book.bib
+++ b/smt40/currentProspectus/book.bib
@@ -2461,4 +2461,12 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/NNUL3ZQX/Pearce - 2018 - Statistical learning and probabilistic prediction .pdf}
 }
 
+@phdthesis{pearceConstructionEvaluationStatistical2005,
+  address = {Department of Computer Science},
+  title = {The Construction and Evaluation of Statistical Models of Melodic Structure in Music Perception and Composition.},
+  school = {City University of London.},
+  author = {Pearce, Marcus},
+  year = {2005}
+}
+
 
