--- a/document/book.bib
+++ b/document/book.bib
@@ -1178,22 +1178,6 @@ Basically article on IDyOM 101
   file = {/Users/davidjohnbaker/Zotero/storage/Q6NJD3IJ/Pearce and Wiggins - 2012 - Auditory Expectation The Information Dynamics of .pdf}
 }
 
-@article{pearceStatisticalLearningProbabilistic2018,
-  title = {Statistical Learning and Probabilistic Prediction in Music Cognition: Mechanisms of Stylistic Enculturation: {{Enculturation}}: Statistical Learning and Prediction},
-  volume = {1423},
-  issn = {00778923},
-  shorttitle = {Statistical Learning and Probabilistic Prediction in Music Cognition},
-  doi = {10.1111/nyas.13654},
-  language = {en},
-  number = {1},
-  journal = {Annals of the New York Academy of Sciences},
-  author = {Pearce, Marcus T.},
-  month = jul,
-  year = {2018},
-  pages = {378-395},
-  file = {/Users/davidjohnbaker/Zotero/storage/PELM97KC/Pearce - 2018 - Statistical learning and probabilistic prediction .pdf}
-}
-
 @article{nicholsScoreOneJazz2018b,
   title = {Score One for Jazz: {{Working}} Memory in Jazz and Classical Musicians.},
   volume = {28},
@@ -2357,10 +2341,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/6KAY6NKD/Stevens - 2012 - Music Perception and Cognition A Review of Recent.pdf}
 }
 
-@article{zotero-446,
-  type = {Article}
-}
-
 @article{wigginsModelsMusicalSimilarity2007,
   title = {Models of Musical Similarity},
   volume = {11},
@@ -2564,4 +2544,28 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/AZE4K86F/Shannon - A mathematical theory of communication.pdf}
 }
 
+@book{margulisRepeatHowMusic2014,
+  address = {Oxford},
+  title = {On {{Repeat}}: {{How}} Music Plays the Mind},
+  publisher = {{Oxford University Press}},
+  author = {Margulis, Elizabeth Hellmuth},
+  year = {2014}
+}
 
+
+@Article{pearceStatisticalLearningProbabilistic2018b,
+  langid = {english},
+  title = {Statistical Learning and Probabilistic Prediction in Music Cognition: Mechanisms of Stylistic Enculturation: {{Enculturation}}: Statistical Learning and Prediction},
+  volume = {1423},
+  issn = {00778923},
+  url = {http://doi.wiley.com/10.1111/nyas.13654},
+  doi = {10.1111/nyas.13654},
+  shorttitle = {Statistical Learning and Probabilistic Prediction in Music Cognition},
+  number = {1},
+  journaltitle = {Annals of the New York Academy of Sciences},
+  urldate = {2018-10-16},
+  date = {2018-07},
+  pages = {378-395},
+  author = {Marcus T. Pearce},
+  file = {/Users/davidjohnbaker/Zotero/storage/7QYDSRI2/Pearce - 2018 - Statistical learning and probabilistic prediction .pdf},
+}
