--- a/document/06-computational-model.Rmd
+++ b/document/06-computational-model.Rmd
@@ -1,21 +1,26 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # Computational Model 
 
-## What's a model?
+## Levels of Abstraction
 
-In his 2007 article _Models of Music Similarity_ [@wigginsModelsMusicalSimilarity2007] Geraint Wiggins distinguishes between _descriptive_ and _explanatory_ models in describing the modeling of human behavior. 
+In his 2007 article _Models of Music Similarity_ [@wigginsModelsMusicalSimilarity2007], Geraint Wiggins distinguishes between _descriptive_ and _explanatory_ models in describing the modeling of human behavior. 
 Descriptive models assert what will happen in response to an event.
 For example, as discussed in the previous chapter, as the note density of a melody increases and the tonalness of a melody decreases, a melody may become harder to dictate.
 While the increase in note density is assumed to drive the decrease in dictation scores, merely stating that there is an established relationship between one variable and the other says nothing about the inner workings of this process.
 An explanatory model on the other hand not only describes what will happen, but additionally notes why and how this process occurs.
-For example, much of the work musical expectation demonstrates that as exposure to a musical style for an individual increases, so does that person's ability to to predict specific events with a given musical texture [@pearceStatisticalLearningProbabilistic2018].
-Not only does more exposure predict more accurate responses, but many of these models derive their underlying theory about this behavior from the brain's ability to implicitly track statistical regularities in musical perception [@saffranStatisticalLearningTone1999].
+For example, much of the work musical expectation demonstrates that as exposure to a musical style for an individual increases, so does that person's ability to to predict specific events with a given musical texture [@pearceStatisticalLearningProbabilistic2018a].
+Not only does more exposure predict more accurate responses, but many of these models derive their underlying theory about this behavior from the brain's ability to implicitly track statistical regularities in musical perception [@saffranStatisticalLearningTone1999;@margulisRepeatHowMusic2014].
 The _how_ derives from the brain's ability to track statistical regularities in musical information in the environment and the _why_ derives from evolutionary demands in that organisms that are able to make more predictions about their environment are more likely to survive and pass on their genes [@huronSweetAnticipation2006]. 
 
 Wiggins writes that although there can be both explanatory and descriptive theories, depending on the level of abstraction, a theory may be explanatory at one level, yet descriptive at another.
-Using the mind-brain dichotomy, he uses the example of a theory of implicit expectations could be explanatory at the level of behavior as noted above, but says nothing about what is happening at the neuronal level.
+Using the mind-brain dichotomy, he asserts that the example of a theory of implicit expectations could be explanatory at the level of behavior as noted above, but says nothing about what is happening at the neuronal level.
 Both descriptive and explanatory theories are needed in that descriptive theories are used to test explanatory theories, and by stringing together different layers of abstraction, we can arrive at a better understanding of how the world works.
 
-Returning to melodic dictation, under Wiggins' framework, the Karpinski model of melodic dictation [@karpinskiAuralSkillsAcquisition2000; @karpinskiModelMusicPerception1990] would qualify as a descriptive model.
+Returning to melodic dictation, under Wiggins' framework, the Karpinski model of melodic dictation [@karpinskiAuralSkillsAcquisition2000; @karpinskiModelMusicPerception1990] qualifies as a descriptive model.
 The model says what happens over the time course of a melodic dictation-- specifying four discrete stages discussed in earlier chapters-- but does not explicitly state _how_ or _why_ this process happens. 
 In order to have a more complete understanding of melodic dictation, an explanatory model is needed. 
 
@@ -24,7 +29,7 @@ The model is inspired by work from both computational musicology drawing on the 
 In addition to quantifying each step, the model incorporates flexible parameters that could be adjusted in order to accommodate for individual differences, while still relying on a domain general process.
 By relying on cognitive mechanisms based in statistical learning, rather than a rule based system for music analysis [@lerdahlGenerativeTheoryTonal1986; @narmourAnalysisCognitionBasic1990; @narmourAnalysisCognitionMelodic1992; @temperleyCognitionBasicMusical2004] this model allows for the heterogeneity of musical experience amongst a diversity of music listeners.
 
-## Model Introduction 
+## Model Overview 
 
 The model consists of three main modules, each with its own set of parameters:
 
@@ -33,14 +38,14 @@ The model consists of three main modules, each with its own set of parameters:
 3. Transcription
 
 Inspired by Bayesian computational modeling, the _Prior Knowledge_ module reflects the previous knowledge an individual brings to the melodic dictation.
-The _Selective Attention_-- somewhat akin to Karpinski's extractive listening^[I use different terms to avoid confusion when comparing models later]-- segments incoming musical information by using the window of attention as conceptualized as the limits of working memory capacity as a sensory bottleneck to constrict the size of musical chunk that an individual were to transcribe.
+The _Selective Attention_-- somewhat akin to Karpinski's extractive listening-- segments incoming musical information by using the window of attention as conceptualized as the limits of working memory capacity as a sensory bottleneck to constrict the size of musical chunk that an individual could to transcribe.
 Once musical material is in the focus of attention, the _Transcription_ function pattern matches against the _Prior Knowledge's_ corpus of information in order to find a match of explicitly known musical information.
 The _Transcription_ function will recursively truncate what musical information is in _Selective Attention_ if no match is found. 
 This process reflects, but does not actually mirror the exact cognitive process used in melodic dictation, yet seems to be phenomenologically similar to the decision making process used when attempting notate novel melodies.
 Based on both the prior knowledge and individual differences of the individual, the model will scale in ability, with the general retrieval mechanisms in place.
 The exact details of the assumptions, parameters, and complete formula of the model are discussed below.
 
-## The Model 
+## Verbal Model 
 
 Below I describe my model's assumptions, parameters, as well as the steps taken when the model is run.
 After detailing the inner workings of each of the assumptions and the modules, described in roughly the order that they occur, I present the model using modular notation with the terminology described below.
@@ -49,21 +54,20 @@ I discuss the issues of assumptions and representations as they arise in describ
 ### Model Representational Assumptions
 
 In order to write a computer program that mirrors the melodic dictation process, how the mind perceives and thinks about musical information must be defined _a priori_.
-Before delving into questions of representation, this model assumes that the musical surface [@lerdahlGenerativeTheoryTonal1986] as represented by the notes via Western musical notation are salient and can be perceived as distinct perceptual phenomena.
-Although there is work that suggests that different cultures and levels of experience might not categorize melodic information universally [@mcdermottIndifferenceDissonanceNative2016], other work suggests that things like experiencing pitches as discrete, categorical phenomena is categorized as a statistical human universal [@savageStatisticalUniversalsReveal2015].
+Before delving into questions of representation, this model assumes that the musical surface^[As conceptualized as either a Schenkerian foreground [@schenkerFreieSatz1935] or defined by @lerdahlGenerativeTheoryTonal1986] as represented by the notes via Western musical notation are salient and can be perceived as distinct perceptual phenomena.
+Although there is work that suggests that different cultures and levels of experience might not categorize melodic information universally [@mcdermottIndifferenceDissonanceNative2016], other work suggests that experiencing pitches as discrete, categorical phenomena is categorized as a statistical human universal [@savageStatisticalUniversalsReveal2015].
 For the purposes of this model I assume that individuals do in fact perceive the musical surface similarly to the written score. 
 
 Knowing that it is melodic information or melodic data that needs to be represented, the question then becomes what is the best way in which to represent it.
-This issue becomes increasingly complex when considering literature suggesting that the human mind represents musical information in a variety of different forms [@krumhanslCognitiveFoundationsMusical2001; @levitinCurrentAdvancesCognitive2009]
-While I will attend to this issue below using the current state of the art, a brief review of how information is represented is warranted. 
+This issue becomes increasingly complex when considering literature suggesting that the human mind represents musical information in a variety of different forms [@krumhanslCognitiveFoundationsMusical2001; @levitinCurrentAdvancesCognitive2009].
 
-For the purposes of this model and further examples I choose to represent musical information using both the pitch (note and scale degree) and timing (rhythm and inter-onset-interval) representation described in @pearceStatisticalLearningProbabilistic2018.
-Future research comparing this model's output using different representations will also contribute to conversations regarding pedagogy in that if one form of data representation mirrors human behavior than the others, it would provide more than anecdotal evidence in support of the pedagogy of one system over another. 
+For the purposes of this model and further examples I choose to represent musical information using both the pitch (note and scale degree) and timing (rhythm and inter-onset-interval) representation described in @pearceStatisticalLearningProbabilistic2018a.
+Future research comparing this model's output using different representations will also contribute to conversations regarding pedagogy in that if one form of data representation mirrors human behavior than the others, it would provide more than evidence in support of the pedagogy of one system over another. 
 How the model represents musical information is the first important parameter value that needs be chosen before running the model and this establishes the prior information.
 
 ### Contents of the Prior Knowledge
 
-The Prior Knowledge consists of a corpus of digitally represented melodies taken to reflect the implicitly understood structural patterns in a musical style that the listener has been exposed to.
+The _Prior Knowledge_ consists of a corpus of digitally represented melodies taken to reflect the implicitly understood structural patterns in a musical style that the listener has been exposed to.
 The logic of representing an individual's prior knowledge follows the assumptions of both the Statistical Learning Hypothesis (SLH) and the Probabilistic Prediction Hypothesis (PPH), both core theoretical assumptions of the Information Dynamic of Music (IDyOM) model of Marcus Pearce [@pearceConstructionEvaluationStatistical2005; @pearceStatisticalLearningProbabilistic2018a].
 Using a corpus of melodies to represent an individual's prior knowledge relies on the Statistical Learning Hypothesis which states:
 
@@ -71,24 +75,23 @@ Using a corpus of melodies to represent an individual's prior knowledge relies o
 
 The logic here is that the more an individual is exposed musical material, the more they will implicitly understand it which leads the corroborating probabilistic prediction hypothesis which states: 
 
-> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 Pearce (2018).
+> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 (Pearce, 2018).
 
-Taken together and then quantified using Shannon information content, it then becomes possible using the IDyOM framework to have a quantifiable measure that reliably predicts the amount of perceived unexpectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
-As a model IDyOM has been successful mirroring human behavior in melodies, harmony-- outperforming [@harrisonDissociatingSensoryCognitive2018] sensory models of harmony [@bigandEmpiricalEvidenceMusical2014]--, and is also being developed to handle polyphonic materials[@sauvePredictionPolyphonyModelling2017]. 
+Taken together and then quantified using Shannon information content [@shannonMathematicalTheoryCommunication1948], it then becomes possible using the IDyOM framework to have a quantifiable measure that reliably predicts the amount of perceived unexpectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
+As a model IDyOM has been successful mirroring human behavior in melodies, harmony-- outperforming [@harrisonDissociatingSensoryCognitive2018] sensory models of harmony [@bigandEmpiricalEvidenceMusical2014]--, and is also being developed to handle polyphonic materials [@sauvePredictionPolyphonyModelling2017]. 
 
-Stepping beyond the assumptions of IDyOM, the prior knowledge also needs to have a implicit/explicitly known parameter which indicates whether or not an pattern of music (single interval through n-gram pattern) is explicitly learned.
+Stepping beyond the assumptions of IDyOM, the prior knowledge also needs to have a implicit/explicitly known parameter which indicates whether or not an pattern of music-- or n-gram^[n-grams refer to the amount of musical objects in a string. For example a bi-gram or 2-gram, would be an interval. Tri-grams or 3-grams would consist of two intervals and so on] pattern-- is explicitly learned.
 This threshold can be set relative to the entire distribution of all n-grams in the corpus. 
-Whether or not an n-gram is explicitly known is used in the _Transcription_ module. 
 
 ### Modeling Information Content 
 
 Having established that the models first established parameters to be decided are the representation of strings and the implicit/explicit threshold, the next important decision that has to be made is how decides segmentation for the second stage of selective attention.
-Although there has been a large amount of work on different ways to segment the musical surface using rule based methods JACKENDOFF NARMOUR 2 TEMPERLY MARGULIS, which rely on matching a music theorist's intuition with a set of descriptive rules somewhat like the boundary formation rules in _GTTM_, as, as noted by @pearceStatisticalLearningProbabilistic2018 rule based models often fail at when applied to music outside the Western art music canon.
+Although there has been a large amount of work on different ways to segment the musical surface using rule based methods [@lerdahlGenerativeTheoryTonal1986; @margulisModelMelodicExpectation2005; @narmourAnalysisCognitionBasic1990; @narmourAnalysisCognitionMelodic1992], which rely on matching a music theorist's intuition with a set of descriptive rules somewhat like the boundary formation rules put forward in _A Generative Theory of Tonal Music_, as noted by Pearce [@pearceStatisticalLearningProbabilistic2018a], rule based models often fail at when applied to music outside the Western art music canon.
 Additionally, since melodic dictation is an active memory process, rather than a semi-passive process of listening this model needs to be able to quantify musical information that is both dependent on prior musical experience and allows a movable boundary for selective attention so that musical information that is memory can be actively maintained, whilst carrying out another cognitive process, that of notating the melody. 
 
 In order to create this metric, I rely on IDyOM's use of information content [@shannonMathematicalTheoryCommunication1948] which quantifies the information content of melodies based on corpus of materials.
-For example, when trained against a corpus of melodies, this excerpt in Figure X from the fourth movement of Schubert's _Octet in F Major_ (D.803) lists the information content of the excerpt calculated for each note atop the notation^[The following musical examples is taken from [@pearceStatisticalLearningProbabilistic2018] reflects a model where IDyOM was configured to predict pitch with an attribute linking melodic pitch interval and chromatic scale degree (pitch and scale degree) using both the short-term and long-term models, the latter trained on 903 folk songs and chorales (data sets 1, 2, and 9 from table 4.1 in [@schaffrathEssenFolkSong1995] comprising 50,867 notes.]
-Appearing in Figure Y, I plot the cumulative information content of the melody, along with both an arbitrary threshold for the limits of working memory capacity and where the subsequent segmentation boundary for musical material to be put in the _Selective Attention_ buffer would be.
+For example, when trained against a corpus of melodies, this excerpt in Figure 7.1 from the fourth movement of Schubert's _Octet in F Major_ (D.803) lists the information content of the excerpt calculated for each note atop the notation^[The following musical examples is taken from [@pearceStatisticalLearningProbabilistic2018] reflects a model where IDyOM was configured to predict pitch with an attribute linking melodic pitch interval and chromatic scale degree (pitch and scale degree) using both the short-term and long-term models, the latter trained on 903 folk songs and chorales (data sets 1, 2, and 9 from table 4.1 in [@schaffrathEssenFolkSong1995] comprising 50,867 notes.]
+Appearing in Figure 7.2, I plot the cumulative information content of the melody, along with both an arbitrary threshold for the limits of working memory capacity and where the subsequent segmentation boundary for musical material to be put in the _Selective Attention_ buffer would be.
 These values chosen show a small example of how the _Selective Attention_ module works.
 The advantage of operationalizing how an individual hears a melody like this is that melodies with lower information content, derived from an understanding of having more predictable patterns from the corpus, will allow for larger chunks to be put inside of the selective attention buffer. 
 Additionally, individuals with higher working memory capacity would be able to take in more musical information.
@@ -97,11 +100,11 @@ Additionally, individuals with higher working memory capacity would be able to t
 knitr::include_graphics("img/SchubertF.pdf")
 ```
 
-```{r, echo=FALSE, fig.cap="",fig.align='center', out.width="100%"}
+```{r, echo=FALSE, fig.cap="Cumulative Information in Schubert Octet Excerpt",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/cumSchubert.jpeg")
 ```
 
-Note that the notes above the melody here are dependent on what is current in the prior knowledge.
+Note that the notes above the melody here are dependent on what is current in the _Prior Knowledge_ module.
 A corpus of prior knowledge with less melodies would lead to higher information content measures for each set of notes, while a prior knowledge that has extensive tracking of the patterns would lead to lower information content. 
 
 ### Setting Limits with Transcribe
@@ -118,14 +121,14 @@ In theory, the maximum of the attentional buffer should not be reached since the
 ### Pattern Matching
 
 With subset of notes of the melody represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explicitly known in the corpus.
-Mirroring a search pattern akin to Cowan's Embedded Process model [@cowanEvolvingConceptionsMemory1988; @cowanMagicalMysteryFour2010], the individual would search across their long term memory, or _Prior Knowledge_ for anything close to or resembling the string pattern in the attentional buffer.
+Mirroring a search pattern akin to Cowan's Embedded Process Model [@cowanEvolvingConceptionsMemory1988; @cowanMagicalMysteryFour2010], the individual would search across their long term memory, or _Prior Knowledge_ for anything close to or resembling the string pattern in the attentional buffer.
 Cowan's model differs from other more module based models of working memory like those of @baddeleyWorkingMemory1974 by positing that working memory should be conceptualized as a small window that is the limit of consious attention.
 As an individual directs their attention to concepts represented in their long term memory, they can only spotlight a finite amount of information where categorical information regarding what is in the window of attention not far.
-Example...? 
+An example of this bottlenecking is given after a formal statement of the model. 
 Using this logic, longer pattern strings n-grams would be less likely to be recalled exactly since they occur less frequently in the prior knowledge.
 
 When searching for a pattern match, the _Transcription_ module is at work.
-If a pattern match that has been moved to _Selective Attention_ is immediately found, the contents of _Selective Attention_ would be considered to be transcribed.
+If a pattern match that has been moved to _Selective Attention_ is immediately found, the contents of _Selective Attention_ would be considered to be notated.
 The model would register that a loop had taken place and document what the n-gram match was.
 Of course, finding an immediate pattern match each time is highly unlikely and the model needs to be able to compensate if that happens.
 If a pattern is not found in the initial search that is _explicitly_ known, one token of the n-gram would be dropped off the string and the search would happen again.
@@ -169,49 +172,82 @@ Of course as a new melody is learned it is slowly being introduced into long ter
 This of course then would be imposing some sort of experimental constraint on the process and since this is meant to be a cognitive computational model of melodic dictation this caveat would complicate the model.
 Future research could be done to optimize the choices that the model makes in order to satisfy whatever constraints are imposed and could be an interesting avenue of future research, but are beyond the initial goals of the model.
 
+### Model Output
+
 The model then outputs each n-gram transcribed and can be counted as a series with less attempts mapping to an easier transcription. 
 I believe that this lines with many intuitions about the process of melodic dictation.
 It first creates a linear mapping of attempts to dictate with difficulty of the melody.
 It relies on a distinction between explicit and implicit statistical knowledge.
 It is based on the embedded process model from working memory and attention, so is part of a larger generative model, giving it a bit more credibility that this _could_ be how melodic dictation works. 
 
-## Model 
+## Formal Model 
 
-Below 
+Below I present the computational model in psudeocode as described above in Figure 7.3.
+First listed are the defined inputs, the functions needed to run the algorithm, and then the sequence the model runs.
+To aid distinguishing between functions and objects, I put functions in italics and objects in bold.
+Below the model in Figure 7.4, I provide a brief walk through of one iteration of the model.
 
-### Definitions 
+### Computational Model 
 
-1. Let the _Prior Knowledge_ be represented by the corpus $M$ where each melody, $m$, is symbolic string representing the all possible n-grams of the melody.
-2. Calculate the information content of each $m$ using IDyOM.
-3. Define $t$ as the threshold set within $M$ as the threshold which an n-gram needs to be represented to be explicitly known.
-4. Let $t$ be a new target melody not represented in $M$.
-5. Let $WMC$ a numeric value representing the maximum information content that can be held in _Selective Attention_.
-6. Define $LISTEN$ as a function that sequentially reads the string $t$
-7. Define $pitch-search$ as pattern matching search of $M$ exclusively on pitch information.
-8. Define $rhythm-search$ as pattern matching search of $M$ exclusively on rhythmic information.
+```{r, echo=FALSE, fig.cap="Formal Model",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/Model.pdf")
+```
 
-### Listening 
+### Example
 
-1. $LISTEN$ to $t$ and calculate the cumulative information content of $t$ until it exceeds $WMC$.
-2. Define truncated string as $exract$. 
-3. Move $extract$ to Selective Attention.
-4. Define $Re-entry$ as function that executes $PLAY$ at pre-defined location in string (i.e. linear, low IC n-gram)
+```{r, echo=FALSE, fig.cap="Model Example",fig.align='center', out.width="100%"}
+knitr::include_graphics("img/Model Graphic.pdf")
+```
 
+The example above shows one iteration of the model run using the musical example from above using a hypothetical corpus for the pattern matching.
+Using the model above, the following inputs were defined _a priori_:
 
-### Transcribe Function
+* The **Prior Knowledge** is a hypothetical corpus of symbolic strings representing all n-grams of melodies
+* The **Threshold** is set to **five** exact matches in the **Prior Knowledge**
+* The **WMC** is set at 17 
+* The **Target Melody** is the Schubert excerpt from above
+* **String Position** is used to track the position in the dictation
+* The **Difficulty** object starts at 0
+* The **Dictation** object is ```NULL``` to begin, and each new n-gram sucessfully transcribed is annexed to it
 
-1. Define $Transcribe$ as : search $M$ for an exact pattern match of $extract$ against n-grams where $explicit == TRUE$.
-2. If match is found, $extract$ is $Notated$, execute $Re-entry$
-3. If no match is found, truncate 1 token from $extract$ and perform search again. Perform this step recursively.
-4. If no match is found, execute $pitch-search$ OR $rhythm search$.
-5. Upon completion of $pitch-search$ OR $rhythm search$, run other search to complete information.
-6. IF no patterns found with $Transcribe$ OR  $pitch-search$ OR $rhythm search$, execute $Re-entry$.
+Figure 7.4 progresses from left to right over the course of time.
+The algorithm begins by first running the ```listen()``` function on the **Target Melody**.
+First the model checks that there are notes to transcribe; this being the first loop of the model, this is obviously ```FALSE``` so the next step is taken.
+Notes of the **Target Melody** are read in to the **Selective Attention** buffer until the information content of the melody exceedes that of the working memory threshold.
+This is depicted graphically in the leftmost panel of Figure 7.4.
+Each note unfolding over time metaphorically fills up the **Selective Attention** working memory buffer.
+When the amount of information reaches the perceptual bottleneck-- as indicated by the dashed line-- the **Selective Attention** buffer stops recieving information.
+At this point the model will mark where in the melody it stopped taking in new information for later.
+Here the contents in **Selective Attention** are moved to the ```transcribe()``` function.
 
-* Will represent it as a flowchart with definitions of terms and functions at top! 
+With the contents of **Selective Attention** passed to ```transcribe()```, the model adds one to the counter indicating the first search is about to run.
+Moving to the middle panel of Figure 7.4, the symbol string of notes in the first column are indexed against the **Prior Knowledge**.
+Only if a five note pattern has appeared more than or equal to  five times, as determined by the **Threshold** input, will the corresponding ```EXPLICIT``` column be ```TRUE```.
+In this case, this pattern has occurred over the threshold of 5 and thus a sucessful match is found.
+It is at this step that the search resembles that of Cowan's model of working memory as active attention.
+The pattern being searched for is compared against a vast amount of information, with cues from the contents of what is in **Selective Attention** grouping similar patterns together.
+At the neural level, this is most likely a much more complex process, but to show this grouping I note that this search is at least organized by the first pitch.
+I assume it would be reasonable that patterns starting on G as ```SOL```^[As determined by being calculated against the corpus with both pitch and scale degree information] might happen together.
+Since this string does have a ```TRUE``` match with ```EXPLICIT```, the contents of **Selective Attention** are considered notated.
+At this point the model would record the 5-gram, along with the string that it was matched with.
+the function would then re-run ```listen``` at the next point in the melody as tracked by the **String Position** object.
+
+If there were not to have been an exact match, the model would remove one token from the melody and performed the search again on the knolwedge of all 4-grams and add another tick to the **Difficulty** counter.
+This process would happen recusively until a match is found.
+If no match is found in either the complex representation, or that of the two rhythm and pitch corpora, the fifth step of ```transcribe``` would trigger ```notateReentry``` to be run without documenting the n-gram currently being dictated.
+This would be akin to a student not being able to identify a difficult interval, thus having to restart the melody at a new position.
+Decisions about re-entry warrent further research and discussion, but this model for the sake of parsimony, assumes linear continuation. 
+As notated in 7.3.5, other modes of re-entry could be incorporated into the model. 
+
+This looping process would occur again and again until the entire melody is notated.
+With each iteration of each n-gram notated, the difficulty counter would increase in relation to the representation of that string in the corpus. 
+This provides an algorithmic implmentation of a theorist's intuition that less common n-grams or intervals (2-grams) are going to lead to higher difficulty in dictation.
+Also worth noting is steps 3 and 4 in the ```transcribe``` function are akin to Karpinski's proto-notation.
+Further research might consider advantages in the order of searchinging the **Prior Knowledge** corpora. 
 
 ## Conclusions
 
-In this chapter, I have presented an explanatory, computational model of melodic dictation.
+In this chapter, I presented an explanatory, computational model of melodic dictation.
 The model combines work from computational musicology and work from cognitive psychology.
 In addition to being a complete model that explicates every step of the dictation process, the model seems to match phenomenological intuitions as to the process of melodic dictation.
 Given the current state of the model, it makes predictions about the dictation process and can eventually be implemented and tested against human behavioral data to provide evidence in support of its verisimilitude.
